# crav1e

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  build.rs  cbindgen.toml
c-examples/: simple_encoding.c
c-tests/: status_to_str.c
data/: rav1e.pc.in
dummy/: Cargo.toml
dummy/src/: lib.rs
src/: lib.rs
