[package]
name = "crav1e"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[lib]
name = "rav1e"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.8"

[dependencies]
libc = "0.2"

[dependencies.rav1e]
git = "https://github.com/xiph/rav1e"
tag = "20190430"
default-features = false

[profile.release]
debug = true
