[package]
name = "crav1e"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[lib]
name = "rav1e"
crate-type = ["staticlib","cdylib"]

[build-dependencies]
cbindgen = "=0.8.4"

[dependencies]
libc = "0.2"
num-traits = "0.2"
num-derive = "0.2"

[dependencies.rav1e]
git = "https://github.com/xiph/rav1e"
default-features = false

[profile.release]
debug = true
